welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:32: error: identifier expected but '(' found.
def(d()) {
   ^ZigZag:37: error: identifier expected but '(' found.
def (g()) {
    ^